--- a/src/_fab.html
+++ b/src/_fab.html
@@ -10,12 +10,9 @@
     <select class="tags" id="fab-tags" multiple>
       <%
         // initialize tags
-        var tags = new Set();
-        shelf.forEach(function(item) {
-          item.tags.forEach(t => tags.add(t));
-        });
+        var tags = json.tags.map(r => r.tag);
         var capitalize = t => t.replace(/(^|\s)(\w)/g, l => l.toUpperCase());
-        Array.from(tags).sort().forEach(function(tag) { %>
+        tags.sort().forEach(function(tag) { %>
       <option value="<%= tag %>"><%= capitalize(tag) %></option>
         <%
         })
