--- a/src/_filters.html
+++ b/src/_filters.html
@@ -5,16 +5,13 @@
   </p>
   <%
     // initialize tags
-    var tags = new Set();
-    shelf.forEach(function(item) {
-      item.tags.filter(t => t.trim()).forEach(t => tags.add(t));
-    });
+    var tags = json.tags.map(t => t.tag);
     var dashify = t => t.replace(/\s+/g, "-");
   %>
   <fieldset class="tags" aria-label="Select tags">
     <input type="checkbox" id="tag-staff-picks" value="staff picks">
     <label for="tag-staff-picks">Staff Picks</label>
-    <% Array.from(tags).sort().filter(t => t != "staff picks").forEach(function(tag) { %>
+    <% tags.sort().filter(t => t != "staff picks").forEach(function(tag) { %>
     <input type="checkbox" id="tag-<%= dashify(tag) %>" value="<%= tag %>">
     <label for="tag-<%= dashify(tag) %>"><%= tag %></label>
     <% }); %>
