--- a/src/_filters.html
+++ b/src/_filters.html
@@ -12,7 +12,7 @@
     <input type="checkbox" id="tag-staff-picks" value="staff picks">
     <label for="tag-staff-picks">Staff Picks</label>
     <% tags.sort().filter(t => t != "staff picks").forEach(function(tag) { %>
-    <input type="checkbox" id="tag-<%= dashify(tag) %>" value="<%= tag %>">
+    <input type="checkbox" id="tag-<%= dashify(tag) %>" value="<%= tag.toLowerCase() %>">
     <label for="tag-<%= dashify(tag) %>"><%= tag %></label>
     <% }); %>
   </fieldset>
