Fix staff picks filter

--- a/src/_filters.html
+++ b/src/_filters.html
@@ -11,7 +11,7 @@
   <fieldset class="tags" aria-label="Select tags">
     <input type="checkbox" id="tag-staff-picks" value="staff picks">
     <label for="tag-staff-picks">Staff Picks</label>
-    <% tags.sort().filter(t => t != "staff picks").forEach(function(tag) { %>
+    <% tags.sort().filter(t => t != "Staff Picks").forEach(function(tag) { %>
     <input type="checkbox" id="tag-<%= dashify(tag) %>" value="<%= tag.toLowerCase() %>">
     <label for="tag-<%= dashify(tag) %>"><%= tag %></label>
     <% }); %>
