add sponsorship code

--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,8 @@
       </div>
     </header>
 
+    <div id="ad-centerstage-wrap">&nbsp;</div>
+
     <main class="concierge">
       <%= t.include("_filters.html") %>
       <%= t.include("_fab.html") %>
@@ -120,5 +122,6 @@ window.conciergeData = {
     </script>
     <script src="app.js" async></script>
     <%= t.include("partials/_analytics.html") %>
+    <%= t.include("partials/_sponsorship.html") %>
   </body>
 </html>
