header: add BWL logo to about section, adjust year labels on smaller screens

--- a/src/about.html
+++ b/src/about.html
@@ -11,7 +11,10 @@
         <img src="./assets/logo-outline.svg" alt="NPR">
         books
       </a>
-      <h1><%= json.copy.title %></h1>
+      <h1>
+        <img src="./assets/books-we-love.svg" alt="">
+        <span class="sr-only"><%= json.copy.title %></span>
+      </h1>
 
       <p class="back-link">
         <a href="index.html">&lsaquo; Back to books</a>
