--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
           " />
           <feGaussianBlur stdDeviation=".5" />
         </filter>
-        <rect x=0 y=0 width="100%" height="100%" filter="url(#grain)" opacity=".2" />
+        <rect x=0 y=0 width="100%" height="100%" filter="url(#grain)" opacity=".25" />
       </svg>
       <div class="raised">
         <h1>
@@ -33,13 +33,15 @@
           <span class="sr-only"><%= json.copy.title %></span>
         </h1>
 
+        <% if (json.copy.subtitle) { %>
+        <h2>
+          <img src="./assets/thoughtfully-curated.svg" alt="">
+          <span class="sr-only"><%= json.copy.subtitle %></span>
+        </h2>
+        <% } %>
+
         <% if (json.copy.bylines) { %>
-          <p class="bylines"><%= json.copy.bylines %>
-            <a href="https://npr.org/books" class="books-home">
-              <img src="./assets/logo-outline.svg" alt="NPR">
-              books
-            </a>
-          </p>
+          <p class="bylines"><%= json.copy.bylines %></p>
         <% } %>
 
         <p class="about-link">
