--- a/src/index.html
+++ b/src/index.html
@@ -25,17 +25,20 @@
           " />
           <feGaussianBlur stdDeviation=".5" />
         </filter>
-        <rect x=0 y=0 width="100%" height="100%" filter="url(#grain)" opacity=".4" />
+        <rect x=0 y=0 width="100%" height="100%" filter="url(#grain)" opacity=".25" />
       </svg>
       <div class="raised">
-        <a href="https://npr.org/books" class="books-home">
-          <img src="./assets/logo-outline.svg" alt="NPR">
-          books
-        </a>
         <h1>
           <img src="./assets/books-we-love.svg" alt="">
           <span class="sr-only"><%= json.copy.title %></span>
         </h1>
+
+        <% if (json.copy.subtitle) { %>
+        <h2>
+          <img src="./assets/thoughtfully-curated.svg" alt="">
+          <span class="sr-only"><%= json.copy.subtitle %></span>
+        </h2>
+        <% } %>
 
         <% if (json.copy.bylines) { %>
           <p class="bylines"><%= json.copy.bylines %></p>
