Mobile header tweaks (#99)
* setup for 2022; use test sheet

* add example mobile tab layout

* mobile tab tweaks for safari,firefox

* align theme colors with brand kit

* more branding styling

* flip theme order

* wip

* wip

* tweak gradient mask

* mobile header spacing tweaks

* mobile header cleanup

Co-authored-by: alykat <alykat@morethanthis.net>

--- a/src/index.html
+++ b/src/index.html
@@ -49,12 +49,14 @@
         </p>
 
         <!-- <h3>Filters</h3> -->
-        <fieldset class="years" aria-label="Select a year">
-          <% grunt.data.json.years.forEach(function(y) { %>
-          <input type="radio" name="year-radio" id="year-<%= y.year %>" value="<%= y.year %>" <%= y.current ? "checked=checked" : "" %>>
-          <label for="year-<%= y.year %>"><%= y.year %></label>
-          <% }); %>
-        </fieldset>
+        <div class="years-container">
+          <fieldset class="years" aria-label="Select a year">
+            <% grunt.data.json.years.forEach(function(y) { %>
+            <input type="radio" name="year-radio" id="year-<%= y.year %>" value="<%= y.year %>" <%= y.current ? "checked=checked" : "" %>>
+            <label for="year-<%= y.year %>"><%= y.year %></label>
+            <% }); %>
+          </fieldset>
+        </div>
       </div>
     </header>
 
