--- a/src/index.html
+++ b/src/index.html
@@ -121,9 +121,10 @@
     <%= t.include("partials/_footer.html", { content: t.include("_footer.html") }) %>
 
     <script>
-window.conciergeData = {
-  reviewers: <%= JSON.stringify(json.reviewers) %>
-};
+    window.conciergeData = {
+      reviewers: <%= JSON.stringify(json.reviewers) %>
+    };
+    window.PROJECT_ANALYTICS = <%= JSON.stringify(json.project.analytics || {}) %>;
     </script>
     <script src="app.js" async></script>
     <%= t.include("partials/_analytics.html") %>
