add 970 ad to available options; add secondary slot

--- a/src/index.html
+++ b/src/index.html
@@ -118,6 +118,8 @@
       <div class="book-detail"></div>
     </main>
 
+    <div id="ad-secondary">&nbsp;</div>
+
     <%= t.include("partials/_footer.html", { content: t.include("_footer.html") }) %>
 
     <script>
