style ad slots, condense code

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
       </div>
     </header>
 
-    <div id="ad-centerstage-wrap">&nbsp;</div>
+    <div id="ad-centerstage-wrap"></div>
 
     <main class="concierge">
       <%= t.include("_filters.html") %>
@@ -118,7 +118,7 @@
       <div class="book-detail"></div>
     </main>
 
-    <div id="ad-secondary">&nbsp;</div>
+    <div id="ad-secondary-wrap"></div>
 
     <%= t.include("partials/_footer.html", { content: t.include("_footer.html") }) %>
 
