--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
       </div>
     </header>
 
-    <div id="ad-centerstage-wrap">&nbsp;</div>
+    <div id="ad-centerstage-wrap"></div>
 
     <main class="concierge">
       <%= t.include("_filters.html") %>
@@ -118,6 +118,8 @@
       <div class="book-detail"></div>
     </main>
 
+    <div id="ad-secondary-wrap"></div>
+
     <%= t.include("partials/_footer.html", { content: t.include("_footer.html") }) %>
 
     <script>
@@ -128,6 +130,6 @@
     </script>
     <script src="app.js" async></script>
     <%= t.include("partials/_analytics.html") %>
-    <%= t.include("partials/_sponsorship.html") %>
+    <%= t.include("partials/_sponsorship.html", { "production": json.project.production }) %>
   </body>
 </html>
