--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,7 @@
     <div id="ad-secondary-wrap"></div>
 
     <%= t.include("partials/_footer.html", { content: t.include("_footer.html") }) %>
-
+    <%= t.include("partials/_schema.html", { data: json.year2023 }) %>
     <script>
     window.conciergeData = {
       reviewers: <%= JSON.stringify(json.reviewers) %>
