--- a/src/index.html
+++ b/src/index.html
@@ -35,18 +35,18 @@
 
         <% if (json.copy.subtitle) { %>
         <h2>
-          <img src="./assets/thoughtfully-curated.svg" alt="">
-          <span class="sr-only"><%= json.copy.subtitle %></span>
+          <a href="https://www.npr.org/books">
+            <img src="./assets/thoughtfully-curated.svg" alt="">
+            <span class="sr-only"><%= json.copy.subtitle %></span>
+          </a>
         </h2>
         <% } %>
 
-        <% if (json.copy.bylines) { %>
-          <p class="bylines"><%= json.copy.bylines %></p>
-        <% } %>
-
-        <p class="about-link">
-          <a href="about.html">About</a>
-        </p>
+        <ul class="outbound">
+          <li><a href="about.html">About Books We Love</a></li>
+          <li><a href="https://www.npr.org/podcasts/510364/daily-books">Book of the Day Podcast</a></li>
+          <li><a href="https://www.npr.org/newsletter/books">Newsletter</a></li>
+        </ul>
 
       </div>
     </header>
