--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
         <% } %>
 
         <ul class="outbound">
-          <li><a href="about.html">About Books We Love</a></li>
+          <li><a href="about.html">About BWL</a></li>
           <li><a href="https://www.npr.org/podcasts/510364/daily-books">Book of the Day Podcast</a></li>
           <li><a href="https://www.npr.org/newsletter/books">Newsletter</a></li>
         </ul>
