incorporate aly's header links code

--- a/src/index.html
+++ b/src/index.html
@@ -43,10 +43,11 @@
         <% if (json.copy.bylines) { %>
           <p class="bylines"><%= json.copy.bylines %></p>
         <% } %>
-
-        <p class="about-link">
-          <a href="about.html">About</a>
-        </p>
+        <ul class="outbound">
+          <li><a href="about.html">About Books We Love</a></li>
+          <li><a href="https://www.npr.org/podcasts/510364/daily-books">Book of the Day Podcast</a></li>
+          <li><a href="https://www.npr.org/newsletter/books">Newsletter</a></li>
+        </ul>
 
         <!-- <h3>Filters</h3> -->
         <div class="years-container">
