add newsletter callout to book view

--- a/src/index.html
+++ b/src/index.html
@@ -118,7 +118,12 @@
 
       </section>
 
+      <div class="book-detail-wrap">
       <div class="book-detail"></div>
+      <div class="newsletter-callout">
+        <p><a href="<%= json.copy.newsletter_link %>"><%= json.copy.newsletter_language %></a></p>
+      </div>
+    </div>
     </main>
 
     <div id="ad-secondary-wrap"></div>
