update newsletter callout styling

--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,7 @@
       <div class="book-detail-wrap">
       <div class="book-detail"></div>
       <div class="newsletter-callout">
-        <p><a href="<%= json.copy.newsletter_link %>"><%= json.copy.newsletter_language %></a></p>
+        <p><em><%= json.copy.newsletter_language %></em></p>
       </div>
     </div>
     </main>
