update header link wording to prevent linebreak

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
           <p class="bylines"><%= json.copy.bylines %></p>
         <% } %>
         <ul class="outbound">
-          <li><a href="about.html">About Books We Love</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="https://www.npr.org/podcasts/510364/daily-books">Book of the Day Podcast</a></li>
           <li><a href="https://www.npr.org/newsletter/books">Newsletter</a></li>
         </ul>
