--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
         <!-- <h3>Filters</h3> -->
     </header>
 
-    <div id="ad-centerstage-wrap"></div>
+    <%= t.include("partials/_ad.html", {id: "ad-centerstage"}) %>
 
     <main class="concierge">
       <div class="years-outer-container">
@@ -126,7 +126,7 @@
         <p><em><%= json.copy.newsletter_language %></em></p>
       </div>
     </div>
-    <div id="ad-secondary-wrap"></div>
+    <%= t.include("partials/_ad.html", {id: "ad-secondary"}) %>
   </div>
     </main>
 
@@ -141,6 +141,7 @@
     window.PROJECT_ANALYTICS = <%= JSON.stringify(json.project.analytics || {}) %>;
     </script>
     <script src="app.js" async></script>
+    <script src="loadHeaderBidding.js" async></script>
     <%= t.include("partials/_analytics.html") %>
     <%= t.include("partials/_sponsorship.html", { "production": json.project.production }) %>
   </body>
