--- a/src/index.html
+++ b/src/index.html
@@ -143,7 +143,7 @@
     window.PROJECT_ANALYTICS = <%= JSON.stringify(json.project.analytics || {}) %>;
     </script>
     <script src="app.js" async></script>
-    <script src="loadHeaderBidding.js" async></script>
+    <!-- <script src="loadHeaderBidding.js" async></script> -->
     <%= t.include("partials/_analytics.html") %>
     <%= t.include("partials/_sponsorship.html", { "production": json.project.production }) %>
   </body>
