--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
         <!-- <h3>Filters</h3> -->
     </header>
 
-    <%= t.include("partials/_ad.html", {id: "ad-centerstage"}) %>
+    <%= t.include("partials/_ad.html", {config: project.sponsorship.locations.centerstage}) %>
 
     <main class="concierge">
       <div class="years-outer-container">
@@ -127,7 +127,7 @@
       </div>
       </div>
       <div class="divider"></div>
-      <%= t.include("partials/_ad.html", {id: "ad-secondary"}) %>
+      <%= t.include("partials/_ad.html", {config: project.sponsorship.locations.secondary}) %>
 
     </div>
     </main>
@@ -143,8 +143,8 @@
     window.PROJECT_ANALYTICS = <%= JSON.stringify(json.project.analytics || {}) %>;
     </script>
     <script src="app.js" async></script>
-    <script src="loadHeaderBidding.js" async></script>
+    <script class="remove-embedded" async="async" src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+    <script src="sponsorship.js" async></script>
     <%= t.include("partials/_analytics.html") %>
-    <%= t.include("partials/_sponsorship.html", { "production": json.project.production }) %>
   </body>
 </html>
