--- a/src/index.html
+++ b/src/index.html
@@ -130,10 +130,10 @@
       <%= t.include("partials/_ad.html", {config: project.sponsorship.locations.secondary}) %>
 
     </div>
-<div id="#global-stickybar-mount-piano"></div>
-<div id="#callout-end-of-story-mount-piano"></div>
-<div id="#global-header-sticky-cta-mount"></div>
-<div id="#global-header-cta-mount"></div>
+<div id="global-stickybar-mount-piano"></div>
+<div id="callout-end-of-story-mount-piano"></div>
+<div id="global-header-sticky-cta-mount"></div>
+<div id="global-header-cta-mount"></div>
     </main>
 
     
