finish adding piano

--- a/src/index.html
+++ b/src/index.html
@@ -130,12 +130,13 @@
       <%= t.include("partials/_ad.html", {config: project.sponsorship.locations.secondary}) %>
 
     </div>
-<div id="global-stickybar-mount-piano"></div>
-<div id="callout-end-of-story-mount-piano"></div>
-<div id="global-header-sticky-cta-mount"></div>
-<div id="global-header-cta-mount"></div>
+    <div id="global-stickybar-mount-piano-wrap" class="global-stickybar">
+      <div id="global-stickybar-mount-piano" class="global-stickybar-mount-piano"></div>
+    </div>
+    
+    <div id="global-header-sticky-cta-mount"></div>
+    <div id="global-header-cta-mount"></div>
     </main>
-
     
 
     <%= t.include("partials/_footer.html", { content: t.include("_footer.html") }) %>
